1.9.0
- Added Outfitter support

1.8.9
- Update libs
- Tooltip updates

1.8.8
- Make bottom left and right multibar moveable
- Added Worldmap skin (incl. Player and Mouse coords, moving and resizing)
- Bug fixes

1.8.7
- Fix petbar auto moving in default position

1.8.6
- Fix lua error if enter an invalid player de/buff size
- Fix petbar auto moving in default position
- Fix combopoint on target error

1.8.5
- Added party leader indicator
- Fix error in afk mode
- Fix Mana/Energy Ticker events

1.8.4
- Added option to change player buff and debuff size
- Added option to hide Mana/Energy tickerbar out of combat
- Fix lua error in party frames
- Fix lua error with frFR
- Fix Mana/Energy for energy only classes

1.8.3
- Added option for Mana/Energy Tickerbar (Thanks Skippbo#2190 aka Saar for all the time and Tests)
- Update to 1.13.5
- Added aggroborder to party and raidframes

1.8.2
- Fix some smaller bugs
- Added option for 5SR: Manarege Ticker: Shows a Ticker if you are Manarege

1.8.1
- Added option "Show Player in Groupframes"
- Added 5SR Timer
    - Debuffs and Buffs are now separated and can be moved to different places (Debuffs only grows with Buffs if they are set there default position - To set the de/buffs to there default position, open Move HUD and click on the little button next to there mover frame)
- Fix druidmanabar in shapeshift form

1.8.0
- Added incoming resurrection icon to raid and party
- Remove RealMobHealth support - Blizzard delivery the correct values now in there API
- Added option for range indicator on mainbar
- Added option to show player health as %, value or both
- Dodge bar now works as a secure button and can be bound to a key
- Rebuilt dodge bar for performance and graphical improvement
- Rebuilt health globe for performance and graphical improvement
- Added extra manabar for druids in shapeshift form (testing)
- Add ability to bind Keys by hover
- Added HUD Scale option as a slider