@@ -307,6 +307,8 @@ local function GWUseThisLocalization()
     L["ENERGY_MANA_TICK_HIDE_OFC"] = "Show Energy/Mana Ticker only in combat"
     L["PLAYER_BUFF_SIZE"] = "Buff size"
     L["PLAYER_DEBUFF_SIZE"] = "Debuff size"
+    L["DISPLAY_PORTRAIT_DAMAGED"] = "Mostrar Daño en el Retrato"
+    L["DISPLAY_PORTRAIT_DAMAGED_DESC"] = "Mostrar Daño en el Retrato en este Marco"
 end
 
 if GetLocale() == "esES" then
