@@ -307,6 +307,8 @@ local function GWUseThisLocalization()
     L["ENERGY_MANA_TICK_HIDE_OFC"] = "Show Energy/Mana Ticker only in combat"
     L["PLAYER_BUFF_SIZE"] = "Buff size"
     L["PLAYER_DEBUFF_SIZE"] = "Debuff size"
+    L["DISPLAY_PORTRAIT_DAMAGED"] = "头像上显示伤害"
+    L["DISPLAY_PORTRAIT_DAMAGED_DESC"] = "在此框体头像上显示伤害"
 end
 
 if GetLocale() == "zhCN" then
