@@ -1,5 +1,6 @@
 1.9.0
 - Added Outfitter support
+- Added target portrait damage
 
 1.8.9
 - Update libs
